[package]
name = "modulator"
version = "0.2.0"

description = "A trait for abstracted, decoupled modulation sources"
authors = ["Andrea Pessino <andrea@readyatdawn.com>"]
categories = ["simulation", "game-engines", "gui"]

keywords = ["animation", "spring", "physics", "game", "engine"]

license  = "MIT"
repository = "https://github.com/apessino/modulator"
readme = "readme.md"

edition = "2018"

[dependencies]
generational-arena = "0.2.3"
rand = "0.7.2"
