[package]
name = "modulator"
version = "0.4.0"
edition = "2021"
description = "A trait for abstracted, decoupled modulation sources"
authors = ["Andrea Pessino <andrea@readyatdawn.com>"]
categories = ["simulation", "game-engines", "gui"]

keywords = ["animation", "spring", "physics", "game", "engine"]

license  = "MIT"
repository = "https://github.com/apessino/modulator"
readme = "readme.md"

[dependencies]
rand = "0.8.5"
metrohash = "1.0.7"
