[package]
name = "modulator"
version = "0.4.1"
edition = "2024"
description = "A trait for abstracted, decoupled modulation sources"
authors = ["Andrea Pessino"]
categories = ["simulation", "game-engines", "gui"]

keywords = ["animation", "spring", "physics", "game", "engine"]

license  = "MIT"
repository = "https://github.com/apessino/modulator"
readme = "readme.md"

[dependencies]
rand = "0.9.0"
metrohash = "1.0.7"
